# crawler

./: .env.example  .gitignore  NEXT.md  README.md  STATUS.md  pyproject.toml
ops/: 2026-05-11-supabase-key-rotation.md  README.md  com.pcpartscrawler.daangn-weekly.plist  com.pcpartscrawler.daily.plist  com.pcpartscrawler.market-prices-daily.plist  com.pcpartscrawler.vocab-weekly.plist
scripts/: aggregate_stats.py  audit_used_data.py  backfill_accessory.py  backfill_used_observations.py  check_watchlist.py  compare_used_aggregation.py  discover_vocab.py  measure_matching_quality.py  review_vocab.py  run_all.py  run_consumer_used.py  run_danawa.py  run_market_prices.py  run_used.py  seed_consumer_products.py
sql/: migration_001_market_stats.sql  migration_002_vocabulary.sql  migration_003_match_reasons.sql  migration_004_accessory_flag.sql  migration_005_crawl_runs.sql  migration_006_market_stats_history.sql  migration_007_watchlists.sql  migration_008_b2c_snapshots_and_chipset.sql  migration_009_app_price_index.sql  migration_010_app_price_index_b2c_sanity.sql  migration_011_product_domains.sql  migration_012_app_price_index_domains.sql  migration_013_market_price_observations.sql  migration_014_app_price_index_reference_prices.sql  migration_015_daily_chart_views.sql  migration_016_used_listing_observations.sql  schema.sql
tests/: conftest.py  test_adapter_base.py  test_adapter_bunjang.py  test_adapter_coolenjoy.py  test_adapter_daangn.py  test_adapter_joonggonara.py  test_adapter_market_prices.py  test_adapter_naver_shop.py  test_adapter_quasarzone.py  (+22 more)
(+87 files in other folders)
