[project]
name = "pc-parts-crawler"
version = "0.1.0"
description = "Danawa / used-market PC parts price crawler"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    "supabase>=2.3",
    "python-dotenv>=1.0",
    "tenacity>=8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ipython"]
browser = ["playwright>=1.50"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
